--- a/index.html
+++ b/index.html
@@ -4,35 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--! назва сторінки (вкладки) -->
     <title>Photoblog SASS</title>
-    <!--! завантаження іконки до назви сторінки (вкладки) title -->
     <link
         href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/16/external-xanga-a-website-that-hosts-weblogs-photoblogs-and-social-networking-profiles-logo-color-tal-revivo.png"
         type="image/x-icon" 
-        rel="shortcut icon"
-    >
-
-    <!--! Спочатку нормалізатор -->
-    <!--! завантаження modern-normalize -->
+        rel="shortcut icon">
     <link 
         rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" 
-    />
-
-    <!--! завантаження шрифтів 'Playfair Display' Regular 400  + 'Ubuntu' 300-->
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
         href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300&display=swap"
-        rel="stylesheet"
-    >
-
-    <!--! файл reset.css -->
-    <!-- <link rel="stylesheet" href="./css/reset.css"> -->
-    <!--! зовнішній файл стилів -->
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <!--! зовнішній файл стилів main.min.css -->
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -62,7 +46,7 @@
             <div class="container flex-colum-container">
                 <h1 class="gallery-title">Photoblog</h1>
                 <ul class="gallery-list">
-                    <li class="gallery-list-item gallery-list__item gallery-list__item--1">
+                    <li class="gallery-list-item gallery-list__item">
                         <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-1.jpg" 
@@ -78,7 +62,7 @@
                             nisi ut aliquip ex ea.
                         </p>
                     </li>
-                    <li class="gallery-list-item gallery-list__item gallery-list__item--2">
+                    <li class="gallery-list-item gallery-list__item">
                         <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-2.jpg" 
@@ -94,7 +78,7 @@
                             nisi ut aliquip ex ea.
                         </p>
                     </li>
-                    <li class="gallery-list-item gallery-list__item gallery-list__item--3">
+                    <li class="gallery-list-item gallery-list__item">
                         <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-3.jpg" 
@@ -110,7 +94,7 @@
                             nisi ut aliquip ex ea.
                         </p>
                     </li>
-                    <li class="gallery-list-item gallery-list__item gallery-list__item--4">
+                    <li class="gallery-list-item gallery-list__item">
                         <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-4.jpg" 
@@ -126,7 +110,7 @@
                             nisi ut aliquip ex ea.
                         </p>
                     </li>
-                    <li class="gallery-list-item gallery-list__item gallery-list__item--5">
+                    <li class="gallery-list-item gallery-list__item">
                         <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-5.jpg" 
@@ -142,7 +126,7 @@
                             nisi ut aliquip ex ea.
                         </p>
                     </li>
-                    <li class="gallery-list-item gallery-list__item gallery-list__item--6">
+                    <li class="gallery-list-item gallery-list__item">
                         <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-6.jpg" 
@@ -162,21 +146,9 @@
                 <button class="gallery-button gallery__button-firts gallery-button--style-firts" type="button">
                     Load more-1
                 </button>
-                <button class="gallery-button gallery__button-second gallery-button--style-second" type="button">
-                    Load more-2
-                </button>
             </div>
         </section>
     </main>
-    <!-- <footer>
-        <address>
-            <ul>
-                <li><a href="./">Facebook</a></li>
-                <li><a href="./">Twitter</a></li>
-                <li><a href="./">Instagram</a></li>
-            </ul>
-        </address>
-    </footer> -->
 </body>
 
 </html>
