--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <header class="header">
         <div class="container">
             <nav class="header-nav header__nav">
+                <input type='checkbox' id='toggle'/>
+                <label for='toggle'>
+                    <span class='toggle-btn'></span>
+                </label>
                 <ul class="header-nav-list nav-list">
                     <li class="header-nav-list-item nav-list__item">
                         <a class="header-nav-list-item-link nav-list__link" href="./lifestyle.html">LIFESTYLE</a>
@@ -47,12 +51,30 @@
                 <h1 class="gallery-title">Photoblog</h1>
                 <ul class="gallery-list">
                     <li class="gallery-list-item gallery-list__item">
-                        <img 
+                        <picture class="team-image">
+                            <source 
+                                srcset="./images/image-1.jpg   1x, 
+                                ./images/image-1-2x.png   2x" 
+                                media="(min-width: 1200px)"
+                            >
+                            <source 
+                            srcset="./images/image-1.jpg   1x, 
+                            ./images/image-1-2x.png   2x" 
+                                media="(min-width: 768px)"
+                            >
+                            <source 
+                            srcset="./images/image-1.jpg   1x, 
+                            ./images/image-1-2x.png   2x" 
+                                media="(min-width: 320px)"
+                            >
+                            <img src="./images/igor-m-1x.png" alt="Ігор Димьяненко">
+                        </picture>
+                        <!-- <img 
                             class="gallery-list-item-img gallery-list__img" 
                             src="./images/image-1.jpg" 
                             alt="дівчина над натовпом"
                             width="420"
-                        >
+                        > -->
                         <a class="gallery-list-item-link gallery-list__link" href="./lifestyle.html">LIFESTYLE</a>
                         <h2 class="gallery-list-item-title gallery-list__title">More than just a music festival</h2>
                         <p class="gallery-list-item-text gallery-list__text">
